--- a/src/ListingCard/ListingCard.css
+++ b/src/ListingCard/ListingCard.css
@@ -1,17 +1,24 @@
 .listing-card {
   background: #FFFFFF;
   border-radius: 15px;
-  height: 60%;
-  margin: 2%;
-  margin-left: 7%;
   min-height: 300px;
-  padding: 1%;
+  padding: 1% 0;
   text-align: center;
   width: 35%;
-  border: 1px solid red;
+  margin: 1% 0;
+  display: flex;
+  flex-flow: column nowrap;
+  text-align: center;
+  justify-content: space-between;
 }
 
-.listing-card-image {
-  width: 55%;
-  border: 2px solid blue;
+.main-image {
+  width: 100%;
+  height: 75%;
+  margin: 0 0 2% 0;
+  object-fit: cover;
+}
+
+.listing-card-header {
+  margin: 0 0 1% 0;
 }
