--- a/src/Listings/Listings.css
+++ b/src/Listings/Listings.css
@@ -1,1 +1,7 @@
-
+.listings-dash {
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
